play-pit/Monitoring/Elastic-Stack/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: elastic-stack
  labels:
    name: elastic-stack
