play-pit/Monitoring/Elastic-Stack/ingress.yaml
---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kibana-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  tls:
  - hosts:
    - kibana.kx-as-code.local
  rules:
  - host: kibana.kx-as-code.local
    http:
      paths:
       - path: /
         backend:
           serviceName: kibana-kibana
           servicePort: 5601

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: elasticsearch-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  tls:
  - hosts:
    - elasticsearch.kx-as-code.local
  rules:
  - host: elasticsearch.kx-as-code.local
    http:
      paths:
       - path: /
         backend:
           serviceName: elasticsearch-master
           servicePort: 9200

---
